Fix link mongodb vs footer infor

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -72,7 +72,7 @@
                             </h4>
                             <div class="tt-collapse-content">
                                 <p>
-                                    Bạn đang tìm kiếm sự chủ động? Hoặc chỉ đơn giản là ngẫu hứng lướt qua như một cơn gió vì chẳng biết phải làm gì. Hãy đến với Bros Shop - nơi mà bất cứ giấc mơ nào cũng có thể trở thành hiện thực. Nơi đây không chỉ có những sản phẩm tuyệt vời mà bạn còn có thể có những phút giây thư giãn bằng việc đọc comment sản phẩm.
+                                    Bạn đang tìm kiếm sự chủ động? Hoặc chỉ đơn giản là ngẫu hứng lướt qua như một cơn gió vì chẳng biết phải làm gì. Hãy đến với EzFashion Shop - nơi mà bất cứ giấc mơ nào cũng có thể trở thành hiện thực. Nơi đây không chỉ có những sản phẩm tuyệt vời mà bạn còn có thể có những phút giây thư giãn bằng việc đọc comment sản phẩm.
                                 </p>
                             </div>
                         </div>
@@ -85,9 +85,9 @@
                                 </h4>
                                 <div class="tt-collapse-content">
                                     <address>
-                                        <p><span>We are:</span>Bros shop</p>
-                                        <p><span>About Us:</span><a href="https://brogrammers2527.github.io/default.html">Brogrammers2527</a></p>
-                                        <p><span>E-mail:</span> <a href="mailto:nocodenolife2527@gmail.com">nocodenolife2527@gmail.com</a></p>
+                                        <p><span>We are:</span>EzWeb shop</p>
+                                        <p><span>About Us:</span><a href="https://inseclab.uit.edu.vn/">EzFashion</a></p>
+                                        <p><span>E-mail:</span> <a href="mailto:20521740@gmail.com">20521740@gmail.com</a></p>
                                     </address>
                                 </div>
                             </div>
