--- a/views/forgot-password.ejs
+++ b/views/forgot-password.ejs
@@ -42,8 +42,7 @@
                       <% } %>
                       <div class="form-group">
                         <label for="loginInputName"
-                          >Email *(Mật khẩu mới sẽ được gửi về email của
-                          bạn)</label
+                          >Email * (Vui lòng kiểm tra email)</label
                         >
                         <div class="tt-required">* Trường bắt buộc</div>
                         <input
