--- a/views/index.ejs
+++ b/views/index.ejs
@@ -392,16 +392,16 @@
                                     <a href="/product/<%= prod._id %>">
                                         <span class="tt-img"
                                             ><img
-                                                src="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[0] %>"
-                                                data-src="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[0] %>"
+                                                src="/images/product/<%= prod.images[0] %>"
+                                                data-src="/images/product/<%= prod.images[0] %>"
                                                 alt=""
                                                 class="loaded"
                                                 data-was-processed="true"
                                         /></span>
                                         <span class="tt-img-roll-over"
                                             ><img
-                                                src="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[1] %>"
-                                                data-src="http://bros-admin.herokuapp.com/assets/images/<%= prod.images[1] %>"
+                                                src="/images/product/<%= prod.images[1] %>"
+                                                data-src="/images/product/<%= prod.images[1] %>"
                                                 alt=""
                                                 class="loaded"
                                                 data-was-processed="true"
