--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,19 +1,34 @@
 <meta charset="utf-8" />
 <title><%= (typeof title != "undefined" ? title : "") %></title>
-<meta name="keywords" content="<%= (typeof title != "undefined" ? title : "") %>"> <meta name="description" content="<%= (typeof title != "undefined"
-? title : "") %>"> <meta name="author" content="<%= (typeof title != "undefined" ? title : "") %>">
+<meta name="keywords" content="<%= (typeof title != "undefined" ? title : "")
+%>"> <meta name="description" content="<%= (typeof title != "undefined" ? title
+: "") %>"> <meta name="author" content="<%= (typeof title != "undefined" ? title
+: "") %>">
 <link rel="shortcut icon" href="/favicon.ico" />
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+/>
 <link rel="stylesheet" href="/stylesheets/theme.css" />
 <link rel="stylesheet" href="/stylesheets/style.css" />
+<link
+    href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css"
+    rel="stylesheet"
+/>
+<style>
+    @import url("https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&display=swap");
+</style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155565511-1"></script>
+<script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=UA-155565511-1"
+></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-  gtag('config', 'UA-155565511-1');
+    gtag("config", "UA-155565511-1");
 </script>
