--- a/views/account-change-info.ejs
+++ b/views/account-change-info.ejs
@@ -73,7 +73,7 @@
                       value="<%= user.phoneNumber %>"
                     />
                   </div>
-                  <div class="form-group">
+                  <!-- <div class="form-group">
                     <label for="shopEmail" class="control-label"
                       >Địa chỉ email *</label
                     >
@@ -84,7 +84,7 @@
                       name="email"
                       value="<%= user.email %>"
                     />
-                  </div>
+                  </div> -->
                   <!-- <div class="checkbox-group">
                     <input type="checkbox" id="checkBox11" name="checkbox" />
                     <label for="checkBox11">
