--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,8 +49,8 @@
                                                     cuối kì
                                                 </div>
                                                 <div class="tp-caption1-wd-3">
-                                                    Môn học phát triển ứng dụng
-                                                    web
+                                                    Môn học Bảo mật web và ứng
+                                                    dụng - NT213.N21.ANTT
                                                 </div>
                                                 <div class="tp-caption1-wd-4">
                                                     <a
