--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
                                                 <div
                                                     class="tp-caption1-wd-1 tt-base-color"
                                                 >
-                                                    Bros
+                                                    EzFashion
                                                 </div>
                                                 <div class="tp-caption1-wd-2">
                                                     Đồ án <br />
@@ -197,7 +197,7 @@
                                                 <div
                                                     class="tp-caption1-wd-1 tt-base-color"
                                                 >
-                                                    Oberlo
+                                                    EzFashion
                                                 </div>
                                                 <div
                                                     class="tp-caption1-wd-2 tt-white-color"
@@ -208,7 +208,7 @@
                                                 <div
                                                     class="tp-caption1-wd-3 tt-white-color"
                                                 >
-                                                    Oberlo allows you to easily
+                                                    EzFashion allows you to easily
                                                     import dropshipped products
                                                     directly into your ecommerce
                                                     store
