--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -85,9 +85,9 @@
                                 </h4>
                                 <div class="tt-collapse-content">
                                     <address>
-                                        <p><span>We are:</span>EzWeb shop</p>
-                                        <p><span>About Us:</span><a href="https://inseclab.uit.edu.vn/">EzFashion</a></p>
-                                        <p><span>E-mail:</span> <a href="mailto:20521740@gmail.com">20521740@gmail.com</a></p>
+                                        <p><span>We are:</span>EzFashion</p>
+                                        <p><span>About Us:</span><a href="https://inseclab.uit.edu.vn/">Web la` de^~</a></p>
+                                        <p><span>E-mail:</span> <a href="mailto:20521740@gmail.com">ezfashionwld@gmail.com</a></p>
                                     </address>
                                 </div>
                             </div>
