--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -87,7 +87,7 @@
                                     <address>
                                         <p><span>We are:</span>EzFashion</p>
                                         <p><span>About Us:</span><a href="https://inseclab.uit.edu.vn/">Web la` de^~</a></p>
-                                        <p><span>E-mail:</span> <a href="mailto:20521740@gmail.com">ezfashionwld@gmail.com</a></p>
+                                        <p><span>E-mail:</span> <a href="mailto:ezfashionwld@gmail.com">ezfashionwld@gmail.com</a></p>
                                     </address>
                                 </div>
                             </div>
