--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -71,16 +71,7 @@
 										
 											<% }); %>
 										</ul>
-								<!-- <li><input type="radio" name="type" value="Áo"> Áo</li>
-								<li><input type="radio" name="type" value="Quần"> Quần</li>
-								<li><input type="radio" name="type" value="Phụ Kiện"> Phụ Kiện</li>
-								<li><input type="radio" name="type" value="Túi xách"> Túi xách</li>
-								<li><input type="radio" name="type" value="Giày"> Giày</li>
-								<li><input type="radio" name="type" value="Mắt Kính"> Mắt Kính</li>
-								<li><input type="radio" name="type" value="Thắt Lưng"> Thắt Lưng</li>
-								<li><input type="radio" name="type" value="Cà Vạt"> Cà Vạt</li>
-								<li><input type="radio" name="type" value="Khăn Choàng"> Khăn Choàng</li>
-								<li><input type="radio" name="type" value="Trang Trí"> Trang Trí</li> -->
+						
 							
 						</div>
 					</div>
@@ -108,30 +99,7 @@
 							</ul>
 						</div>
 					</div>
-					<!-- <div class="tt-collapse open">
-						<h3 class="tt-collapse-title">Lọc theo màu sắc</h3>
-						<div class="tt-collapse-content">
-							<ul class="tt-options-swatch options-middle">
-								<li><a class="options-color tt-border tt-color-bg-08" href="#"></a></li>
-								<li><a class="options-color tt-color-bg-09" href="#"></a></li>
-								<li class="active"><a class="options-color tt-color-bg-10" href="#"></a></li>
-								<li><a class="options-color tt-color-bg-11" href="#"></a></li>
-								<li><a class="options-color tt-color-bg-12" href="#"></a></li>
-								<li><a class="options-color tt-color-bg-13" href="#"></a></li>
-								<li><a class="options-color tt-color-bg-14" href="#"></a></li>
-								<li><a class="options-color tt-color-bg-15" href="#"></a></li>
-								<li><a class="options-color tt-color-bg-16" href="#"></a></li>
-								<li><a class="options-color tt-color-bg-17" href="#"></a></li>
-								<li><a class="options-color tt-color-bg-18" href="#"></a></li>
-								<li><a class="options-color" href="#">
-									<span class="swatch-img">
-										<img src="/images/custom/texture-img-01.jpg" alt="">
-									</span>
-									<span class="swatch-label color-black"></span>
-								</a></li>
-							</ul>
-						</div>
-					</div> -->
+					
 					<div class="tt-collapse open">
 						<h3 class="tt-collapse-title">Thương hiệu</h3>
 						<div class="tt-collapse-content">
@@ -147,28 +115,7 @@
 					<button type="submit" class="btn btn-border mx-auto mb-5">Lọc</button>
 					</form>
 					
-					<!-- <div class="tt-collapse open">
-						<h3 class="tt-collapse-title">TAGS</h3>
-						<div class="tt-collapse-content">
-							<ul class="tt-list-inline">
-								<li><a href="#">Dresses</a></li>
-								<li><a href="#">Shirts &amp; Tops</a></li>
-								<li><a href="#">Polo Shirts</a></li>
-								<li><a href="#">Sweaters</a></li>
-								<li><a href="#">Blazers</a></li>
-								<li><a href="#">Vests</a></li>
-								<li><a href="#">Jackets</a></li>
-								<li><a href="#">Outerwear</a></li>
-								<li><a href="#">Activewear</a></li>
-								<li><a href="#">Pants</a></li>
-								<li><a href="#">Jumpsuits</a></li>
-								<li><a href="#">Shorts</a></li>
-								<li><a href="#">Jeans</a></li>
-								<li><a href="#">Skirts</a></li>
-								<li><a href="#">Swimwear</a></li>
-							</ul>
-						</div>
-					</div> -->
+					
 					<div class="tt-content-aside">
 						<a href="/products" class="tt-promo-03">
 							<img src="/images/custom/listing_promo_img_07.jpg" alt="">
@@ -369,7 +316,7 @@
 								<ul class="pagination justify-content-center">
 										<% if (currentPage !== 1){ %>
 										<li class="page-item">
-												<a class="page-link" href="/products/?page=<%= previousPage %>" aria-label="Previous">
+												<a class="page-link" href="/products/?page=<%= previousPage %><%= query %>" aria-label="Previous">
 												  <span aria-hidden="true">&laquo;</span>
 												  <span class="sr-only">Previous</span>
 												</a>
@@ -379,18 +326,18 @@
 
 								  
 								  <% if(hasPreviousPage ){  %>
-									<li class="page-item"><a class="page-link" href="?page=<%= previousPage %>"><%= previousPage %></a></li>
+									<li class="page-item"><a class="page-link" href="?page=<%= previousPage %><%= query %>"><%= previousPage %></a></li>
 								  <% } %>
 
 								  <li class="page-item active"><a class="page-link" href="javascript:void(0)" tabindex="-1"><%= currentPage %></a></li>
 
 								  <% if(hasNextPage){  %>
-									  <li class="page-item"><a class="page-link" href="?page=<%= nextPage %>"><%= nextPage %></a></li>
+									  <li class="page-item"><a class="page-link" href="?page=<%= nextPage %><%= query %>"><%= nextPage %></a></li>
 								  <% } %>
 								  
 								  <% if(currentPage < lastPage){ %>
 								  <li class="page-item">
-										<a class="page-link" href="?page=<%= nextPage %>" aria-label="Next">
+										<a class="page-link" href="?page=<%= nextPage %><%= query %>" aria-label="Next">
 										  <span aria-hidden="true">&raquo;</span>
 										  <span class="sr-only">Next</span>
 										</a>
