--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <% include partials/head %>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script>
+      function onSubmit(token) {
+        document.getElementById("customer_login").submit();
+      }
+    </script>
   </head>
   <body>
     <% include partials/loader %>
@@ -82,7 +88,10 @@
                       <div class="row">
                         <div class="col-auto mr-auto">
                           <div class="form-group">
-                            <button class="btn btn-border" type="submit">
+                            <!-- <button class="btn btn-border" type="submit">
+                              Đăng nhập
+                            </button> -->
+                            <button class="btn btn-borde g-recaptcha" data-sitekey="<%= captcha %>" data-callback="onSubmit">
                               Đăng nhập
                             </button>
                           </div>
