Fix reset password

--- a/src/views/forgot-password.ejs
+++ b/src/views/forgot-password.ejs
@@ -32,17 +32,26 @@
                       novalidate="novalidate"
                       action="/forgot-password"
                     >
-                      <%if (message != "undefined") { %>
+                      <%if (message !== "undefined") { %>
                       <div
-                        class="form-group form-control error"
-                        style="background-color: #FFCCCC; font-weight: bold; color : rgb(210, 29, 29)"
+                        
+                        class="form-group form-control"
+                        style="background-color: #FFBABA; font-weight: bold; color: #D8000C"
                       >
                         <%= message %>
                       </div>
                       <% } %>
+                      <%if (messageSuccess !== "undefined") { %>
+                        <div
+                          class="form-group form-control "
+                          style="background-color: #DFF2BF; font-weight: bold; ;color: #270;"
+                        >
+                          <%= messageSuccess %>
+                        </div>
+                        <% } %>
                       <div class="form-group">
                         <label for="loginInputName"
-                          >Email * (Vui lòng kiểm tra email)</label
+                          >Email *</label
                         >
                         <div class="tt-required">* Trường bắt buộc</div>
                         <input
